refactor: add cloneOrPull to gateway, remove GitLabLocalSourceProvider
CodeRepositoryGateway:
  + cloneOrPull(namespace, repo, branch, token): Path
    - fixed path: workspaceDir/cache/{namespace}_{repo}__{branch}
    - clones on first call, git pull on subsequent calls
    - no SHA/timestamp in path — one stable directory per branch

GitLabGateway:
  - implements cloneOrPull via JGit:
    absent dir  -> Git.cloneRepository() shallow depth=1
    present dir -> git.pull() with credentials
  - keeps open Git handle in ConcurrentMap keyed by path
    for efficient repeated pulls

RepositoryCacheService:
  - initCache: uses gateway.cloneOrPull() instead of cloneProject()
  - refreshCache: uses gateway.cloneOrPull(); SHA check before pull
    (no-op if SHA unchanged); creates new BranchCacheEntry with
    updated localPath on SHA change

GitLabLocalSourceProvider: deleted
  - was the only non-cache consumer of cloneProject() for graph builds
  - replaced entirely by CachedSourceManagementService + LocalProjectSourceProvider